crates/djls-extraction/tests/snapshots/corpus__thirdparty__django_allauth.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(combined)
---
tag_rules:
  "allauth.account.templatetags.account::user_display":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: user
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "allauth.socialaccount.templatetags.socialaccount::get_providers":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "allauth.socialaccount.templatetags.socialaccount::get_social_accounts":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: user
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "allauth.socialaccount.templatetags.socialaccount::provider_login_url":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: provider
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "allauth.socialaccount.templatetags.socialaccount::providers_media_js":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "allauth.templatetags.allauth::setvar":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities: {}
block_specs:
  "allauth.templatetags.allauth::element":
    end_tag: endelement
    intermediates: []
    opaque: false
  "allauth.templatetags.allauth::setvar":
    end_tag: endsetvar
    intermediates: []
    opaque: false
  "allauth.templatetags.allauth::slot":
    end_tag: endslot
    intermediates: []
    opaque: false
