crates/djls-extraction/tests/snapshots/corpus__thirdparty__django_compressor.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(combined)
---
tag_rules:
  "compressor.templatetags.compress::compress":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: kind
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities: {}
block_specs:
  "compressor.templatetags.compress::compress":
    end_tag: endcompress
    intermediates: []
    opaque: false
