crates/djls-extraction/tests/snapshots/corpus__thirdparty__django_debug_toolbar.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(combined)
---
tag_rules: {}
filter_arities: {}
block_specs: {}
